fix: List 정적 메서드 리팩토링 및 코드리뷰 피드백 적용 (#56)
* fix: List 정적 메서드 리팩토링

* fix: if else 괄호 적용

* fix: Converter 미적용 부분 수정

* fix: h2 StringUtils 메서드 사용 제거 및 자체 구현

* fix: convertToEvent 메서드 List 정적 메서드 사용 제거

* fix: isBlankPictureUrl 소괄호 적용